--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--suppress ALL -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.babasoft.vocabs"
     android:installLocation="auto"
@@ -33,8 +34,6 @@
         <activity
             android:name="WordLists"
             android:label="@string/WordLists" >
-        </activity>
-        <activity android:name="FileSelectorActivity" >
         </activity>
         <activity
             android:name="com.babasoft.vocabs.PrefsActivity"
