--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,20 @@
     package="com.babasoft.vocabs"
     android:installLocation="auto"
     android:versionCode="10"
-    android:versionName="2.4" >
+    android:versionName="2.4">
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="true" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.VIBRATE" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
+
 
     <application
         android:icon="@drawable/main_icon"
@@ -84,21 +97,4 @@
             android:theme="@style/AppTheme">
         </activity>
     </application>
-
-     <uses-sdk
-      android:minSdkVersion="14"
-      android:targetSdkVersion="27" />
-    <supports-screens
-        android:anyDensity="false"
-        android:largeScreens="true"
-        android:normalScreens="true"
-        android:smallScreens="true" />
-
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" >
-    </uses-permission>
-    <uses-permission android:name="android.permission.VIBRATE" >
-    </uses-permission>
-    <uses-permission android:name="android.permission.INTERNET" >
-    </uses-permission>
-
 </manifest>
