--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,11 @@
         android:normalScreens="true"
         android:smallScreens="true" />
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" >
-    </uses-permission>
-    <uses-permission android:name="android.permission.VIBRATE" >
-    </uses-permission>
-    <uses-permission android:name="android.permission.INTERNET" >
-    </uses-permission>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"> </uses-permission>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" > </uses-permission>
+
+    <uses-permission android:name="android.permission.VIBRATE"> </uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"> </uses-permission>
 
 
     <application
